--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
-fdfgdcebh
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>João Victor Santos Araújo</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background: #003366;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        section {
+            background: white;
+            margin: 20px;
+            padding: 20px;
+            border-radius: 6px;
+        }
+
+        img {
+            width: 180px;
+            border-radius: 50%;
+            display: block;
+            margin: auto;
+        }
+
+        h2 {
+            color: #003366;
+        }
+
+        ul {
+            list-style: square;
+        }
+    </style>
+</head>
+
+<body>
+
+    <!-- Cabeçalho -->
+    <header>
+        <h1>João Victor Santos Araújo</h1>
+        <p>Gosto de treinar e sempre evoluir!</p>
+    </header>
+
+    <!-- Foto -->
+    <section>
+        <h2>Foto</h2>
+        <!-- Substitua a imagem abaixo pelo link da sua foto -->
+        <img src="foto.jpg" alt="Foto de João Victor">
+    </section>
+
+    <!-- Contato -->
+    <section>
+        <h2>Contato</h2>
+        <p><strong>E-mail:</strong> joaovictor@email.com</p>
+        <p><strong>LinkedIn:</strong> <a href="#" target="_blank">linkedin.com/in/seuPerfil</a></p>
+    </section>
+
+    <!-- Educação -->
+    <section>
+        <h2>Educação</h2>
+        <p>● Ensino Superior em Tecnologia (Exemplo) — Universidade XPTO</p>
+        <p>● Conclusão: 2025</p>
+    </section>
+
+    <!-- Experiência Profissional -->
+    <section>
+        <h2>Experiência Profissional</h2>
+        <ul>
+            <li>Estágio em Suporte Técnico — 2024</li>
+            <li>Desenvolvedor Web Júnior — Projetos estudantis</li>
+        </ul>
+    </section>
+
+    <!-- Habilidades -->
+    <section>
+        <h2>Habilidades</h2>
+        <ul>
+            <li>HTML, CSS, JavaScript</li>
+            <li>Git e GitHub</li>
+            <li>Comunicação</li>
+            <li>Trabalho em equipe</li>
+        </ul>
+    </section>
+
+</body>
+</html>
