--- a/index.html
+++ b/index.html
@@ -24,21 +24,34 @@
             margin: 20px;
             padding: 20px;
             border-radius: 6px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
 
         img {
             width: 180px;
             border-radius: 50%;
             display: block;
-            margin: auto;
+            margin: 10px auto;
         }
 
         h2 {
             color: #003366;
+            border-bottom: 2px solid #003366;
+            padding-bottom: 5px;
         }
 
         ul {
             list-style: square;
+            padding-left: 20px;
+        }
+
+        a {
+            color: #003366;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -54,8 +67,13 @@
     <!-- Foto -->
     <section>
         <h2>Foto</h2>
-        <!-- Substitua a imagem abaixo pelo link da sua foto -->
         <img src="foto.jpg" alt="Foto de João Victor">
+    </section>
+
+    <!-- Sobre Mim -->
+    <section>
+        <h2>Sobre Mim</h2>
+        <p>Sou estudante de Desenvolvimento de Sistemas no IFAL. Gosto muito de jogar bola, assistir filmes e estar sempre aprendendo coisas novas. Tenho interesse em tecnologia, programação e gosto de trabalhar em equipe.</p>
     </section>
 
     <!-- Contato -->
@@ -68,16 +86,15 @@
     <!-- Educação -->
     <section>
         <h2>Educação</h2>
-        <p>● Ensino Superior em Tecnologia (Exemplo) — Universidade XPTO</p>
-        <p>● Conclusão: 2025</p>
+        <p><strong>Curso:</strong> Desenvolvimento de Sistemas — IFAL (Instituto Federal de Alagoas)</p>
+        <p><strong>Conclusão prevista:</strong> 2025</p>
     </section>
 
     <!-- Experiência Profissional -->
     <section>
         <h2>Experiência Profissional</h2>
         <ul>
-            <li>Estágio em Suporte Técnico — 2024</li>
-            <li>Desenvolvedor Web Júnior — Projetos estudantis</li>
+            <li>Desenvolvedor web — Projetos estudantis e pessoais</li>
         </ul>
     </section>
 
@@ -85,10 +102,9 @@
     <section>
         <h2>Habilidades</h2>
         <ul>
-            <li>HTML, CSS, JavaScript</li>
+            <li>HTML, CSS e JavaScript (nível básico)</li>
             <li>Git e GitHub</li>
-            <li>Comunicação</li>
-            <li>Trabalho em equipe</li>
+            <li>Comunicação e trabalho em equipe</li>
         </ul>
     </section>
 
