--- a/atividade01.html
+++ b/atividade01.html
@@ -1,101 +1,249 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>João Victor Santos Araújo</title>
+    <title>VerdeVivo - Cozinha Vegana</title>
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background: #003366;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-
-        section {
-            background: white;
-            margin: 20px;
-            padding: 20px;
-            border-radius: 6px;
-        }
-
-        img {
-            width: 180px;
-            border-radius: 50%;
-            display: block;
-            margin: auto;
-        }
-
-        h2 {
-            color: #003366;
-        }
-
-        ul {
-            list-style: square;
-        }
-    </style>
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
 
-    <!-- Cabeçalho -->
-    <header>
-        <h1>João Victor Santos Araújo</h1>
-        <p>Gosto de treinar e sempre evoluir!</p>
-    </header>
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
+    <div class="container">
+        <a class="navbar-brand fw-bold" href="#">VerdeVivo</a>
 
-    <!-- Foto -->
-    <section>
-        <h2>Foto</h2>
-        <img src="foto.jpg" alt="Foto de João Victor">
-    </section>
+        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <!-- Contato -->
-    <section>
-        <h2>Contato</h2>
-        <p><strong>E-mail:</strong> joaovictor@email.com</p>
+        <div id="nav" class="collapse navbar-collapse">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a href="#home" class="nav-link">Início</a></li>
+                <li class="nav-item"><a href="#cardapio" class="nav-link">Cardápio</a></li>
+                <li class="nav-item"><a href="#sobre" class="nav-link">Sobre Nós</a></li>
+                <li class="nav-item"><a href="#reservas" class="nav-link">Reservas</a></li>
+                <li class="nav-item"><a href="#galeria" class="nav-link">Galeria</a></li>
+                <li class="nav-item"><a href="#contato" class="nav-link">Contato</a></li>
+                <li class="nav-item"><a href="#online" class="nav-link">Pedidos</a></li>
+                <li class="nav-item"><a href="#promocoes" class="nav-link">Promoções</a></li>
+                <li class="nav-item"><a href="#avaliacoes" class="nav-link">Avaliações</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- HERO -->
+<section id="home" class="pt-5 mt-5">
+    <div class="container text-center py-5">
+        <h1 class="display-4 text-success fw-bold">Bem-vindo ao VerdeVivo</h1>
+        <p class="lead">Culinária 100% vegana, sustentável e cheia de sabor.</p>
+
+        <!-- IMAGENS -->
+        <div class="row mt-4">
+            <div class="col-md-4"><img src="https://via.placeholder.com/400" class="img-fluid rounded"></div>
+            <div class="col-md-4"><img src="https://via.placeholder.com/400" class="img-fluid rounded"></div>
+            <div class="col-md-4"><img src="https://via.placeholder.com/400" class="img-fluid rounded"></div>
+        </div>
+
+        <!-- HORÁRIOS -->
+        <h3 class="mt-4">Horários de Funcionamento</h3>
+        <ul class="list-group w-50 mx-auto">
+            <li class="list-group-item">Seg – Qui: 11h – 22h</li>
+            <li class="list-group-item">Sex – Sáb: 11h – 23h</li>
+            <li class="list-group-item">Dom: 12h – 20h</li>
+        </ul>
+    </div>
+</section>
+
+<!-- CARDAPIO -->
+<section id="cardapio" class="py-5 bg-light">
+    <div class="container">
+        <h2 class="text-center text-success fw-bold mb-4">Cardápio</h2>
+
+        <!-- CATEGORIAS -->
+        <h4 class="text-success">Entradas</h4>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/400" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Bruschetta Vegana</h5>
+                        <p class="card-text">Tomates frescos, manjericão e azeite extra virgem.</p>
+                        <p class="fw-bold">R$ 22,00</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h4 class="mt-4 text-success">Pratos Principais</h4>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/400" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Strogonoff Vegano</h5>
+                        <p class="card-text">Cogumelos, creme de castanhas e arroz integral.</p>
+                        <p class="fw-bold">R$ 34,90</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h4 class="mt-4 text-success">Especiais</h4>
+        <div class="alert alert-success">
+            Prato do Dia: **Lasanha de Berinjela Vegana – R$ 29,90**
+        </div>
+    </div>
+</section>
+
+<!-- SOBRE NÓS -->
+<section id="sobre" class="py-5">
+    <div class="container">
+        <h2 class="text-center text-success fw-bold mb-4">Sobre Nós</h2>
+
+        <p><strong>História:</strong> O VerdeVivo nasceu da paixão pela culinária vegana e pelo respeito ao meio ambiente.</p>
+
+        <p><strong>Chef:</strong> Nosso chef, <em>Gabriel Monteiro</em>, é especializado em gastronomia vegana gourmet.</p>
+
+        <p><strong>Prêmios:</strong> Vencedor do “Melhor Restaurante Vegano da Cidade – 2024”.</p>
+    </div>
+</section>
+
+<!-- RESERVAS -->
+<section id="reservas" class="py-5 bg-light">
+    <div class="container">
+        <h2 class="text-center text-success fw-bold">Reservas</h2>
+
+        <form class="row g-3 mt-3">
+            <div class="col-md-4">
+                <label class="form-label">Data</label>
+                <input type="date" class="form-control">
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Horário</label>
+                <input type="time" class="form-control">
+            </div>
+            <div class="col-md-4">
+                <label class="form-label">Número de Pessoas</label>
+                <input type="number" class="form-control" min="1">
+            </div>
+
+            <div class="col-12">
+                <label class="form-label">Nome</label>
+                <input type="text" class="form-control">
+            </div>
+
+            <div class="col-12">
+                <label class="form-label">Telefone</label>
+                <input type="text" class="form-control">
+            </div>
+
+            <div class="col-12 text-center">
+                <button class="btn btn-success">Reservar</button>
+            </div>
+        </form>
+
+        <p class="mt-4"><strong>Política de Reservas:</strong> Cancelamentos devem ser feitos com 2h de antecedência.</p>
+    </div>
+</section>
+
+<!-- GALERIA -->
+<section id="galeria" class="py-5">
+    <div class="container">
+        <h2 class="text-center text-success fw-bold mb-4">Galeria</h2>
+
+        <div class="row g-3">
+            <div class="col-md-3"><img src="https://via.placeholder.com/400" class="img-fluid rounded"></div>
+            <div class="col-md-3"><img src="https://via.placeholder.com/400" class="img-fluid rounded"></div>
+            <div class="col-md-3"><img src="https://via.placeholder.com/400" class="img-fluid rounded"></div>
+            <div class="col-md-3"><img src="https://via.placeholder.com/400" class="img-fluid rounded"></div>
+        </div>
+
+        <h4 class="mt-4 text-success">Avaliações</h4>
+        <blockquote class="blockquote">
+            "Comida maravilhosa e atendimento perfeito!" — Ana P.
+        </blockquote>
+    </div>
+</section>
+
+<!-- CONTATO -->
+<section id="contato" class="py-5 bg-light">
+    <div class="container">
+        <h2 class="text-center text-success fw-bold">Fale Conosco</h2>
+
+        <p><strong>Endereço:</strong> Rua Verde 123, Centro</p>
+        <p><strong>Telefone:</strong> (11) 99999-9999</p>
+        <p><strong>Email:</strong> contato@verdevivo.com</p>
+
+        <iframe class="w-100 mb-3" height="250" src=""></iframe>
+
+        <form class="row g-3">
+            <div class="col-md-6">
+                <label class="form-label">Nome</label>
+                <input type="text" class="form-control">
+            </div>
+            <div class="col-md-6">
+                <label class="form-label">Email</label>
+                <input type="email" class="form-control">
+            </div>
+            <div class="col-12">
+                <label class="form-label">Mensagem</label>
+                <textarea class="form-control" rows="4"></textarea>
+            </div>
+            <div class="col-12 text-center">
+                <button class="btn btn-success">Enviar</button>
+            </div>
+        </form>
+    </div>
+</section>
+
+<!-- PEDIDOS ONLINE -->
+<section id="online" class="py-5">
+    <div class="container">
+        <h2 class="text-center text-success fw-bold mb-4">Pedidos Online</h2>
+
+        <p>Faça seu pedido para entrega ou retirada.</p>
+
+        <p><strong>Áreas de Entrega:</strong> Centro, Bairro Verde, Jardim Florido</p>
+        <p><strong>Tempo de Entrega:</strong> 30–50 minutos</p>
+
+        <button class="btn btn-success">Fazer Pedido</button>
+    </div>
+</section>
+
+<!-- PROMOÇÕES -->
+<section id="promocoes" class="py-5 bg-light">
+    <div class="container">
+        <h2 class="text-center text-success fw-bold">Promoções Especiais</h2>
+
+        <div class="alert alert-success mt-3">
+            ⭐ **Desconto de 20% nas Quartas-Feiras Veganas!**
+        </div>
+    </div>
+</section>
+
+<!-- AVALIAÇÕES ONLINE -->
+<section id="avaliacoes" class="py-5">
+    <div class="container">
+        <h2 class="text-center text-success fw-bold">Avaliações Online</h2>
+
         <p>
-            <strong>LinkedIn:</strong>
-            <a href="#" target="_blank" rel="noopener noreferrer">
-                linkedin.com/in/seuPerfil
-            </a>
+            <a href="#" class="btn btn-outline-success">Yelp</a>
+            <a href="#" class="btn btn-outline-success">TripAdvisor</a>
         </p>
-    </section>
+    </div>
+</section>
 
-    <!-- Educação -->
-    <section>
-        <h2>Educação</h2>
-        <p>• Ensino Superior em Tecnologia (Exemplo) — Universidade XPTO</p>
-        <p>• Conclusão: 2025</p>
-    </section>
+<!-- FOOTER -->
+<footer class="py-3 bg-success text-white text-center">
+    © 2025 VerdeVivo – Cozinha Vegana
+</footer>
 
-    <!-- Experiência Profissional -->
-    <section>
-        <h2>Experiência Profissional</h2>
-        <ul>
-            <li>Estágio em Suporte Técnico — 2024</li>
-            <li>Desenvolvedor Web Júnior — Projetos estudantis</li>
-        </ul>
-    </section>
-
-    <!-- Habilidades -->
-    <section>
-        <h2>Habilidades</h2>
-        <ul>
-            <li>HTML, CSS, JavaScript</li>
-            <li>Git e GitHub</li>
-            <li>Comunicação</li>
-            <li>Trabalho em equipe</li>
-        </ul>
-    </section>
+<!-- JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
-
