--- a/index.html
+++ b/index.html
@@ -1,105 +1,240 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>João Victor Santos Araújo</title>
+<meta charset="UTF-8">
+<title>Vegano Master</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            background-color: #f4f4f4;
-        }
+<style>
+/* ---------- ESTILO GERAL ---------- */
+body {
+  margin: 0;
+  font-family: 'Segoe UI', Arial, sans-serif;
+  background-color: #f6f8f5;
+  color: #333;
+}
 
-        header {
-            background: #003366;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
+h1, h2, h3 {
+  color: #2e7d32;
+}
 
-        section {
-            background: white;
-            margin: 20px;
-            padding: 20px;
-            border-radius: 6px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
+section {
+  padding: 60px 10%;
+}
 
-        img {
-            width: 180px;
-            border-radius: 50%;
-            display: block;
-            margin: 10px auto;
-        }
+img {
+  max-width: 100%;
+  border-radius: 12px;
+}
 
-        h2 {
-            color: #003366;
-            border-bottom: 2px solid #003366;
-            padding-bottom: 5px;
-        }
+/* ---------- MENU ---------- */
+header {
+  background-color: #2e7d32;
+  padding: 20px 10%;
+  color: white;
+}
 
-        ul {
-            list-style: square;
-            padding-left: 20px;
-        }
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-        a {
-            color: #003366;
-            text-decoration: none;
-        }
+nav a {
+  color: white;
+  text-decoration: none;
+  margin-left: 20px;
+  font-weight: bold;
+}
 
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+nav a:hover {
+  text-decoration: underline;
+}
+
+/* ---------- INÍCIO ---------- */
+#inicio {
+  background: linear-gradient(to right, #e8f5e9, #ffffff);
+}
+
+.destaques {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  margin-top: 30px;
+}
+
+/* ---------- CARDÁPIO ---------- */
+.cardapio-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 30px;
+}
+
+.item-cardapio {
+  background: white;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+}
+
+/* ---------- RESERVAS E CONTATO ---------- */
+form input, form textarea, form button {
+  width: 100%;
+  padding: 12px;
+  margin-top: 10px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
+
+form button {
+  background-color: #2e7d32;
+  color: white;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #256628;
+}
+
+/* ---------- GALERIA ---------- */
+.galeria {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+/* ---------- RODAPÉ ---------- */
+footer {
+  background-color: #1b5e20;
+  color: white;
+  text-align: center;
+  padding: 30px 10%;
+}
+
+footer a {
+  color: #c8e6c9;
+  margin: 0 10px;
+  text-decoration: none;
+}
+</style>
 </head>
 
 <body>
 
-    <!-- Cabeçalho -->
-    <header>
-        <h1>João Victor Santos Araújo</h1>
-        <p>Gosto de treinar e sempre evoluir!</p>
-    </header>
+<header>
+  <nav>
+    <h1>Vegano Master</h1>
+    <div>
+      <a href="#inicio">Início</a>
+      <a href="#cardapio">Cardápio</a>
+      <a href="#sobre">Sobre</a>
+      <a href="#reservas">Reservas</a>
+      <a href="#contato">Contato</a>
+    </div>
+  </nav>
+</header>
 
-    <!-- Foto -->
-    <section>
-        <h2>Foto</h2>
-        <img src="foto.jpg" alt="Foto de João Victor">
-    </section>
+<!-- INÍCIO -->
+<section id="inicio">
+  <h2>Bem-vindo ao Vegano Master</h2>
+  <p>
+    Uma experiência gastronômica 100% vegana, saudável e sustentável.
+    Pratos criativos, ambiente acolhedor e respeito à natureza.
+  </p>
 
-    <!-- Sobre Mim -->
-    <section>
-        <h2>Sobre Mim</h2>
-        <p>Sou estudante de Desenvolvimento de Sistemas no IFAL. Gosto muito de jogar bola, assistir filmes e estar sempre aprendendo coisas novas. Tenho interesse em tecnologia, programação e gosto de trabalhar em equipe.</p>
-    </section>
+  <div class="destaques">
+    <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c" alt="Prato vegano">
+    <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd" alt="Salada vegana">
+    <img src="https://images.unsplash.com/photo-1506086679525-9b9c0e4d9f67" alt="Hambúrguer vegano">
+  </div>
 
-    <!-- Contato -->
-    <section>
-        <h2>Contato</h2>
-        <p><strong>E-mail:</strong> joaovictor@email.com</p>
-        <p><strong>LinkedIn:</strong> <a href="#" target="_blank">linkedin.com/in/seuPerfil</a></p>
-    </section>
+  <h3>Horário de Funcionamento</h3>
+  <ul>
+    <li>Seg–Sex: 11h às 22h</li>
+    <li>Sábado: 12h às 23h</li>
+    <li>Domingo: 12h às 21h</li>
+  </ul>
+</section>
 
-    <!-- Educação -->
-    <section>
-        <h2>Educação</h2>
-        <p><strong>Curso:</strong> Desenvolvimento de Sistemas — IFAL (Instituto Federal de Alagoas)</p>
-        <p><strong>Conclusão prevista:</strong> 2025</p>
-    </section>
+<!-- CARDÁPIO -->
+<section id="cardapio">
+  <h2>Nosso Cardápio</h2>
 
+  <div class="cardapio-grid">
+    <div class="item-cardapio">
+      <img src="https://images.unsplash.com/photo-1555939594-58d7cb561ad1">
+      <h3>Strogonoff de Cogumelos</h3>
+      <p>Cremoso, feito com leite vegetal.</p>
+      <strong>R$ 49,00</strong>
+    </div>
 
-    <!-- Habilidades -->
-    <section>
-        <h2>Habilidades</h2>
-        <ul>
-            <li>HTML, CSS e JavaScript (nível básico)</li>
-            <li>Git e GitHub</li>
-            <li>Comunicação e trabalho em equipe</li>
-        </ul>
-    </section>
+    <div class="item-cardapio">
+      <img src="https://images.unsplash.com/photo-1523986371872-9d3ba2e2f642">
+      <h3>Hambúrguer Vegano</h3>
+      <p>Grão-de-bico, quinoa e temperos naturais.</p>
+      <strong>R$ 45,00</strong>
+    </div>
+
+    <div class="item-cardapio">
+      <img src="https://images.unsplash.com/photo-1551024709-8f23befc6cf7">
+      <h3>Brownie Vegano</h3>
+      <p>Chocolate 70% e sem lactose.</p>
+      <strong>R$ 22,00</strong>
+    </div>
+  </div>
+</section>
+
+<!-- SOBRE -->
+<section id="sobre">
+  <h2>Sobre Nós</h2>
+  <p>
+    O Vegano Master nasceu para provar que comida vegana pode ser
+    saborosa, criativa e acessível.
+  </p>
+
+  <h3>Chef Ana Verde</h3>
+  <p>
+    Especialista em culinária plant-based, formada internacionalmente
+    e premiada na gastronomia sustentável.
+  </p>
+</section>
+
+<!-- RESERVAS -->
+<section id="reservas">
+  <h2>Reservas</h2>
+  <form>
+    <input type="date">
+    <input type="time">
+    <input type="number" placeholder="Número de pessoas">
+    <input type="email" placeholder="Seu e-mail">
+    <button>Reservar</button>
+  </form>
+</section>
+
+<!-- CONTATO -->
+<section id="contato">
+  <h2>Fale Conosco</h2>
+  <p>📍 Rua Verde, 100 – Centro</p>
+  <p>📞 (11) 98888-7777</p>
+
+  <form>
+    <input type="text" placeholder="Nome">
+    <input type="email" placeholder="E-mail">
+    <textarea placeholder="Mensagem"></textarea>
+    <button>Enviar</button>
+  </form>
+</section>
+
+<!-- RODAPÉ -->
+<footer>
+  <p>Siga-nos nas redes sociais</p>
+  <a href="#">Instagram</a>
+  <a href="#">Facebook</a>
+  <a href="#">TripAdvisor</a>
+  <p>© 2025 – Vegano Master</p>
+</footer>
 
 </body>
 </html>
